--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "test": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "vue": "2.6.10"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-eslint": "^3.0.4",
-    "@vue/cli-plugin-unit-jest": "^3.0.4",
-    "@vue/cli-service": "^3.0.4",
-    "@vue/test-utils": "^1.0.0-beta.25",
+    "@vue/cli-plugin-babel": "3.12.0",
+    "@vue/cli-plugin-eslint": "3.12.0",
+    "@vue/cli-plugin-unit-jest": "4.0.3",
+    "@vue/cli-service": "3.12.0",
+    "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.0.1",
-    "node-sass": "^4.9.3",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.17"
+    "babel-jest": "25.0.0",
+    "node-sass": "4.12.0",
+    "sass-loader": "8.0.0",
+    "vue-template-compiler": "2.6.10"
   },
   "eslintConfig": {
     "root": true,
